Fix top and bottom spacing

--- a/ui/components/cards/flavors/base/index.scss
+++ b/ui/components/cards/flavors/base/index.scss
@@ -17,28 +17,35 @@
   }
 
   &__header,
-  &__footer {
-    padding: $spacing-small $spacing-large;
-  }
-
-  // Option wrapper if something like tiles exist
+  &__footer,
   &__body--inner {
-    padding: 0 $spacing-large;
+    padding-left: $spacing-large;
+    padding-right: $spacing-large;
+  }
+
+  &__header {
+    padding-top: $spacing-small;
+    margin-bottom: $spacing-small;
   }
 
   &__footer {
+    margin-top: $spacing-small;
+    padding-bottom: $spacing-small;
     text-align: right;
   }
 
   &--narrow {
 
-    .#{$css-prefix}card__header,
+    .#{$css-prefix}card__header {
+      padding-top: $spacing-large;
+      margin-bottom: $spacing-large;
+    }
     .#{$css-prefix}card__footer {
-      padding: $spacing-large;
+      padding-bottom: $spacing-medium;
     }
   }
 
-  @include deprecate('3.0.0', 'Use spacing helpers instead.') {
+  @include deprecate('3.0.0', 'Use .card__body--inner instead.') {
     .#{$css-prefix}tile {
       margin: $spacing-small $spacing-large;
     }
